inspect card overflow: auto fix

--- a/front-end/src/components/UI/Card/Card.module.css
+++ b/front-end/src/components/UI/Card/Card.module.css
@@ -21,7 +21,7 @@
   box-shadow: 0 5px 10px -4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
   min-height: 340px;
   width: 95%;
   margin: 10px 0;
